--- a/index.html
+++ b/index.html
@@ -219,8 +219,9 @@
     <nav class="navbar bg-body-tertiary">
       <div class="container-fluid d-flex justify-content-center">
         <span class="navbar-text">
-          Made by Harsh Shukla 😉
+          Made by ©
         </span>
+        <a href="https://github.com/harshshukla07" class="navbar-text link-secondary"> Harsh Shukla</a>
       </div>
     </nav>
   </div>
